{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 306,
  "lineage": "f3555530-8380-fa26-f44e-3452aac07ec0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/networkInterfaces/my-rgroup-azure-nic",
            "ip_configuration": [
              {
                "name": "my-rgroup-ipconfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/publicIPAddresses/my-rgroup-publicIp",
                "subnet_id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/virtualNetworks/my-rgroup-net/subnets/my-rgroup-az1-subnet"
              }
            ],
            "location": "uksouth",
            "name": "my-rgroup-azure-nic",
            "network_security_group_id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/networkSecurityGroups/my-rgroup-vnet-securitygroup",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "my-rgroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.azure_rg_new",
            "azurerm_subnet.myterraformsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/networkSecurityGroups/my-rgroup-vnet-securitygroup",
            "location": "uksouth",
            "name": "my-rgroup-vnet-securitygroup",
            "resource_group_name": "my-rgroup",
            "security_rule": [],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.azure_rg_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "my-security-rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/networkSecurityGroups/my-rgroup-vnet-securitygroup/securityRules/my-rgroup-my-srule-ssh",
            "name": "my-rgroup-my-srule-ssh",
            "network_security_group_name": "my-rgroup-vnet-securitygroup",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "my-rgroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_resource_group.azure_rg_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "myvm",
            "fqdn": "myvm.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/publicIPAddresses/my-rgroup-publicIp",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "my-rgroup-publicIp",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "my-rgroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.azure_rg_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/virtualNetworks/my-rgroup-net/subnets/my-rgroup-az1-subnet",
            "name": "my-rgroup-az1-subnet",
            "resource_group_name": "my-rgroup",
            "virtual_network_name": "my-rgroup-net"
          },
          "depends_on": [
            "azurerm_resource_group.azure_rg_new",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/fc939fda-41b8-4fdf-b2bb-8502e9317042/resourceGroups/my-rgroup/providers/Microsoft.Network/virtualNetworks/my-rgroup-net",
            "location": "uksouth",
            "name": "my-rgroup-net",
            "resource_group_name": "my-rgroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.azure_rg_new"
          ]
        }
      ]
    }
  ]
}